--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -49,9 +49,9 @@ collections:
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Description', name: 'description', widget: 'string' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
-  - name: 'projects'
+  - name: 'pages'
     # identifier_field: name
-    label: 'Projects'
+    label: 'Pages'
     label_singular: 'Project'
     folder: 'assets/content/projects'
     create: true
