--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,4 +1,4 @@
-site_url: https://rocketsecure.tech
+site_url: https://ntn-boilerplate.netlify.app/
 logo_url: https://ntn-boilerplate.netlify.app/icon.png
 
 publish_mode: editorial_workflow
@@ -51,8 +51,8 @@ collections:
       - { label: 'Body', name: 'body', widget: 'markdown' }
   - name: 'pages'
     # identifier_field: name
-    label: 'Pages'
-    label_singular: 'Pages'
+    label: 'Projects'
+    label_singular: 'Project'
     folder: 'assets/content/projects'
     create: true
     format: 'json'
